tests/test69.rael.exp
Error [23:20]: Expected key
| :69420nice routine(17637261973) {
|                    ^
